name:               tamarin-prover-theory

cabal-version:      >= 1.8
build-type:         Simple
version:            1.7.1
license:            GPL
license-file:       LICENSE
category:           Theorem Provers
author:             Benedikt Schmidt <benedikt.schmidt@inf.ethz.ch>,
                    Simon Meier <simon.meier@inf.ethz.ch>,
                    Jannik Dreier <research@jannikdreier.net>,
                    Ralf Sasse <ralf.sasse@gmail.com>
maintainer:         Cas Cremers <cremers@cispa.de>,
                    Jannik Dreier <research@jannikdreier.net>,
                    Ralf Sasse <ralf.sasse@gmail.com>
copyright:          Benedikt Schmidt, Simon Meier, Jannik Dreier, Ralf Sasse, ETH Zurich, 2010-2018

synopsis:           Security protocol types and constraint solver library for the tamarin prover.

description:        This is an internal library of the Tamarin prover for
                    security protocol verification
                    (<hackage.haskell.org/package/tamarin-prover>).
                    .
                    This library provides the types to represent security
                    protocols, and it implements the constraint solver.

homepage:           https://tamarin-prover.github.io/


source-repository head
  type:     git
  location: https://github.com/tamarin-prover/tamarin-prover.git

----------------------
-- library stanzas
----------------------

library
    ghc-options:       -Wall -fwarn-tabs

    ghc-prof-options:  -auto-all

    build-depends:
        aeson
      , aeson-pretty
      , base
      , binary
      , bytestring
      , containers
      , deepseq
      , dlist
      , fclabels
      , filepath
      , mtl
      , parallel
      , parsec
      , process
      , safe
      , text
      , transformers
      , uniplate
      , exceptions

      , tamarin-prover-utils
      , tamarin-prover-term


    hs-source-dirs: src

    exposed-modules:
      Theory
      Theory.Proof
      Theory.ProofSkeleton

      Theory.Constraint.Solver
      Theory.Constraint.Solver.Sources
      Theory.Constraint.Solver.Contradictions
      Theory.Constraint.Solver.Goals
      Theory.Constraint.Solver.ProofMethod
      Theory.Constraint.Solver.Reduction
      Theory.Constraint.Solver.Simplify
      Theory.Constraint.Solver.Heuristics

      Theory.Constraint.System
      Theory.Constraint.System.Constraints
      Theory.Constraint.System.Dot
      Theory.Constraint.System.JSON
      Theory.Constraint.System.Guarded

      Theory.Sapic.Term
      Theory.Sapic.Pattern
      Theory.Sapic.Process
      Theory.Sapic.Position
      Theory.Sapic.Annotation
      Theory.Sapic
      Theory.Sapic.Print

      Theory.Model
      Theory.Model.Atom
      Theory.Model.Fact
      Theory.Model.Formula
      Theory.Model.Rule
      Theory.Model.Signature
      Theory.Model.Restriction

      Theory.Module

      Theory.Text.Pretty
      Theory.Text.Parser
      Theory.Text.Parser.Token
      Theory.Text.Parser.Restriction
      Theory.Text.Parser.Signature

      Theory.Tools.AbstractInterpretation
      Theory.Tools.EquationStore
      Theory.Tools.InjectiveFactInstances
      Theory.Tools.IntruderRules
      Theory.Tools.LoopBreakers
      Theory.Tools.RuleVariants
      Theory.Tools.Wellformedness
      TheoryObject
      Lemma
      OpenTheory
      ClosedTheory
      Rule
      Prover
      Items.LemmaItem
      Items.OpenTheoryItem
      Items.OptionItem
      Items.RuleItem
      Items.ProcessItem
      Items.TheoryItem
      Items.ExportInfo
      Items.CaseTestItem
      Items.AccLemmaItem
      Pretty


    other-modules:
      Theory.Syntactic.Predicate
      Theory.Text.Parser.Accountability
      Theory.Text.Parser.Exceptions
      Theory.Text.Parser.Fact
      Theory.Text.Parser.Formula
      Theory.Text.Parser.Lemma
      Theory.Text.Parser.Let
      Theory.Text.Parser.Proof
      Theory.Text.Parser.Rule
      Theory.Text.Parser.Sapic
      Theory.Text.Parser.Term
      Theory.Sapic.PlainProcess
      Theory.Sapic.Substitution
