name:               tamarin-prover-utils

cabal-version:      >= 1.8
build-type:         Simple
version:            0.1.0.0
license:            GPL
license-file:       LICENSE
category:           Theorem Provers
author:             Benedikt Schmidt <benedikt.schmidt@inf.ethz.ch>,
                    Simon Meier <simon.meier@inf.ethz.ch>
maintainer:         Simon Meier <simon.meier@inf.ethz.ch>
copyright:          Benedikt Schmidt, Simon Meier, ETH Zurich, 2010-2012

synopsis:           Utility library for the tamarin prover.

description:        This is an internal library of the @tamarin@ prover for
                    security protocol verification
                    (<hackage.haskell.org/package/tamarin-prover>). 

homepage:           http://www.infsec.ethz.ch/research/software#TAMARIN


----------------------
-- library stanzas
----------------------

library
    build-depends:
        base              == 4.*
      , mtl               == 2.0.*
      , transformers      == 0.2.*
      , containers        == 0.4.*
      , fclabels          == 1.0.*
      , blaze-builder     == 0.3.*
      , base64-bytestring >= 0.1.0.3 && < 0.2
      , bytestring        == 0.9.*
      , SHA               == 1.4.*
      , parsec            == 3.1.*
      , deepseq           == 1.1.*
      , syb               >= 0.3.3   && < 0.4
      , pretty            == 1.1.*
      , time              == 1.2.*
      , binary            == 0.5.*

    hs-source-dirs: src

    exposed-modules:
        Control.Basics
        Control.Monad.Fresh
        Control.Monad.Bind
        Control.Monad.Disj

        Data.Color
        Data.DAG.Simple

        Extension.Prelude
        Extension.Data.Label
        Extension.Data.Bounded

        Text.Dot
        Text.Isar
        Text.PrettyPrint.Class
        Text.PrettyPrint.Highlight
        Text.PrettyPrint.Html

        Logic.Connectives

        System.Timing

        Debug.Trace.Ignore

        Utils.Misc

    other-modules:
        Control.Monad.Trans.Fresh
        Control.Monad.Fresh.Class

        Control.Monad.Trans.Disj
        Control.Monad.Disj.Class

