name:               tamarin-prover-utils

cabal-version:      >= 1.8
build-type:         Simple
version:            1.3.0
license:            GPL
license-file:       LICENSE
category:           Theorem Provers
author:             Benedikt Schmidt <benedikt.schmidt@inf.ethz.ch>,
                    Simon Meier <simon.meier@inf.ethz.ch>
maintainer:         Simon Meier <simon.meier@inf.ethz.ch>
copyright:          Benedikt Schmidt, Simon Meier, ETH Zurich, 2010-2012

synopsis:           Utility library for the tamarin prover.

description:        This is an internal library of the Tamarin prover for
                    security protocol verification
                    (<hackage.haskell.org/package/tamarin-prover>).

homepage:           http://www.infsec.ethz.ch/research/software/tamarin

source-repository head
  type:     git
  location: https://github.com/tamarin-prover/tamarin-prover.git


----------------------
-- library stanzas
----------------------

library
    ghc-options:       -Wall -fwarn-tabs
    ghc-prof-options:  -auto-all

    build-depends:
        SHA
      , base
      , base64-bytestring
      , binary
      , blaze-builder
      , bytestring
      , containers
      , deepseq
      , dlist
      , fclabels
      , mtl
      , pretty
      , safe
      , syb
      , time
      , transformers

    hs-source-dirs: src

    exposed-modules:
        Control.Basics
        Control.Monad.Fresh
        Control.Monad.Trans.PreciseFresh
        Control.Monad.Trans.FastFresh
        Control.Monad.Bind
        Control.Monad.Disj

        Data.Color
        Data.DAG.Simple

        Extension.Prelude
        Extension.Data.Label
        Extension.Data.Monoid
        Extension.Data.Bounded
        Extension.Data.ByteString

        Text.Dot
        Text.Unicode
        Text.PrettyPrint.Class
        Text.PrettyPrint.Highlight
        Text.PrettyPrint.Html

        Logic.Connectives

        System.Timing

        Debug.Trace.Ignore

        Utils.Misc

    other-modules:
        Control.Monad.Fresh.Class

        Control.Monad.Trans.Disj
        Control.Monad.Disj.Class

